--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Saba Tabatabaee"
+title                    : "Mohammadreza Saghafi"
 title_separator          : "-"
-name                     : &name "Saba Tabatabaee"
-description              : &description "Saba Tabatabaee's Personal Website"
-url                      : "https://SabaTabatabaee.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Mohammadreza Saghafi"
+description              : &description "Mohammadreza Saghafi's Personal Website"
+url                      : "https://saghafim.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "SabaTabatabaee/SabaTabatabaee.github.io"
+repository               : "saghafim/saghafim.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Saba Tabatabaee"
+  name             : "Mohammadreza Saghafi"
   avatar           : "sabatabatabaee.jpeg"
-  bio              : "Ph.D Student at University of Maryland, College Park |<br>  <br><br>email: sabatb [at] umd.edu"
+  bio              : "Ph.D Student at Virginia Tech |<br>  <br><br>email: sabatb [at] umd.edu"
   location         : "College Park, MD"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=d7tPM7MAAAAJ&hl=en"
-  email            : "sabatb@umd.edu"
+  email            : "saghafim@umd.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : 
   bitbucket        :
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "SabaTabatabaee"
+  github           : "saghafim"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "saba-tabatabaee-5bb776236"
+  linkedin         : "mohammadreza1saghafi"
   orcid            :
   pinterest        :
   soundcloud       :
