--- a/_config.yml
+++ b/_config.yml
@@ -81,12 +81,12 @@ analytics:
 # Site Author
 author:
   name             : "Mohammadreza Saghafi"
-  avatar           : "sabatabatabaee.jpeg"
-  bio              : "Ph.D Student at Virginia Tech |<br>  <br><br>email: sabatb [at] umd.edu"
+  avatar           : "havij.jpeg"
+  bio              : "Ph.D Student at Virginia Tech |<br>  <br><br>email: saghafim [at] vt.edu"
   location         : "College Park, MD"
   employer         :
   pubmed           :
-  googlescholar    : "https://scholar.google.com/citations?user=d7tPM7MAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=qrg3Bn8AAAAJ&hl=en"
   email            : "saghafim@umd.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : 
