--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,9 @@ main:
 
   - title: "Publications"
     url: publications/
-    
+
+  - title: "Projects"
+    url: projects/
   #- title: "CV"
    # url: files/CV_XiyangWu.pdf
 
