--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "About Me"
     url:
 
-  - title: "Publications"
-    url: publications/
+  #- title: "Publications"
+  #  url: publications/
 
   - title: "Projects"
     url: projects/
